# TOGT-Planner

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  package.xml
cmake/: catkin.cmake  gtest.cmake
include/drolib/base/: corridor_base.hpp  parameter_base.hpp  shape_base.hpp
include/drolib/corridor/: free_corridor.hpp  prisma_corridor.hpp  single_ball.hpp
include/drolib/file/: file_utils.hpp  yaml.hpp
include/drolib/geometry/: geoutils.hpp  quickhull.hpp
include/drolib/math/: fast_atan2.hpp  gravity.hpp  math_utils.h  median.hpp  min_max_recorder.hpp
include/drolib/planner/: angle.hpp  traj_data.hpp  traj_params.hpp  traj_solver.hpp  waypoint.hpp
include/drolib/polynomial/: cubic_spline.h  cubic_spline3d.h  piecewise_polynomial.hpp  poly_traj_utils.hpp  polynomial.hpp  trajectory.hpp
include/drolib/race/: race_params.hpp  race_planner.hpp  race_track.hpp
include/drolib/rotation/: rotation_utils.h
include/drolib/shape/: ball.h  free_point.h  hexagon.h  pentagon.h  polygon.h  polyhedron.h  rectangle.h  triangle.h
include/drolib/solver/: banded_system.hpp  lbfgs.hpp  lbfgs_params.hpp  minco_snap.hpp  root_finder.hpp  sdlp.hpp
include/drolib/system/: minco_snap_trajectory.hpp  quadrotor_manifold.hpp  quadrotor_params.hpp
include/drolib/type/: command.hpp  imu_sample.hpp  odom.hpp  quad_state.hpp  set_point.hpp  types.hpp
include/drolib/utils/: logger.hpp  timer.hpp
parameters/cpc/: cpc_quad.yaml  cpc_setups.yaml
parameters/cpc/init/: cpc_lbfgs.yaml  cpc_planning.yaml
parameters/cpc/refine/: cpc_lbfgs.yaml  cpc_planning.yaml
parameters/cpc/replan/: cpc_lbfgs.yaml  cpc_planning.yaml
parameters/standard/: standard_lbfgs.yaml  standard_planning.yaml  standard_quad.yaml  standard_setups.yaml
resources/racetrack/: race_uzh_19g.yaml  race_uzh_19wp.yaml  race_uzh_7g_multiprisma.yaml
resources/trajectory/: aos_refined_traj.csv  aos_togt_traj.csv  aos_togt_wpt.yaml  aos_traj.csv  aos_wpt.yaml  plot_aos_traj.py  plot_togt_traj.py  plot_traj.py  togt_refined_traj.csv  togt_traj.csv  togt_wpt.yaml  traj.csv
scripts/plots/: plot_aos_refined_traj.py  plot_aos_togt_traj.py  plot_aos_traj.py  plot_togt_refined_traj.py  plot_togt_traj.py  track.py
scripts/togt_refine/: optimization.py  quadrotor.py  togt_refine.py  trajectory.py
src/base/: parameter_base.cpp  shape_base.cpp
src/corridor/: free_corridor.cpp  prisma_corridor.cpp  single_ball.cpp
src/math/: math_utils.cpp
src/planner/: traj_data.cpp  traj_params.cpp  traj_solver.cpp
src/polynomial/: cubic_spline.cpp  cubic_spline3d.cpp
src/race/: race_params.cpp  race_planner.cpp  race_track.cpp
src/rotation/: rotation_utils.cpp
src/shape/: ball.cpp  free_point.cpp  hexagon.cpp  pentagon.cpp  polygon.cpp  polyhedron.cpp  rectangle.cpp  triangle.cpp
src/solver/: lbfgs_params.cpp
src/system/: minco_snap_trajectory.cpp  quadrotor_bk.txt  quadrotor_manifold.cpp  quadrotor_params.cpp
src/type/: command.cpp  quad_state.cpp
src/utils/: logger.cpp  timer.cpp
tests/: CMakeLists.txt  TestPlanner.cpp  test_aos.cpp  test_aos_togt.cpp  test_togt.cpp
